--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@types/better-sqlite3": "^7.6.11",
     "better-sqlite3": "^11.3.0",
     "drizzle-orm": "^0.33.0",
     "nuxt": "^3.13.0",
