--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "migrate": "drizzle-kit migrate"
   },
   "dependencies": {
     "@types/better-sqlite3": "^7.6.11",
     "better-sqlite3": "^11.3.0",
     "drizzle-orm": "^0.33.0",
+    "nanoid": "^5.0.7",
     "nuxt": "^3.13.0",
     "vue": "latest",
     "vue-router": "latest"
