--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "migrate": "drizzle-kit migrate"
   },
   "dependencies": {
+    "@nuxt/ui": "^2.18.6",
     "@types/better-sqlite3": "^7.6.11",
     "better-sqlite3": "^11.3.0",
     "drizzle-orm": "^0.33.0",
