--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "migrate": "drizzle-kit migrate"
+    "migrate": "drizzle-kit migrate",
+    "generate-migration": "drizzle-kit generate"
   },
   "dependencies": {
     "@nuxt/ui": "^2.18.6",
@@ -17,6 +18,7 @@
     "drizzle-orm": "^0.33.0",
     "nanoid": "^5.0.7",
     "nuxt": "^3.13.0",
+    "valibot": "^0.42.1",
     "vue": "latest",
     "vue-router": "latest"
   },
