--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/better-sqlite3": "^7.6.11",
     "better-sqlite3": "^11.3.0",
     "drizzle-orm": "^0.33.0",
+    "maska": "^3.0.2",
     "nanoid": "^5.0.7",
     "nuxt": "^3.13.0",
     "valibot": "^0.42.1",
