--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@libsql/client": "^0.14.0",
+    "@nuxt/fonts": "^0.9.2",
     "@nuxt/image": "^1.8.1",
     "@nuxt/ui": "^2.18.6",
     "@types/better-sqlite3": "^7.6.11",
