--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nuxt/fonts": "^0.9.2",
     "@nuxt/image": "^1.8.1",
     "@nuxt/ui": "^2.18.6",
+    "@nuxthub/core": "^0.7.26",
     "@types/better-sqlite3": "^7.6.11",
     "better-sqlite3": "^11.3.0",
     "dotenv": "^16.4.5",
