--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "@nuxt/image": "^1.8.1",
     "@nuxt/ui": "^2.18.6",
     "@nuxthub/core": "^0.7.26",
+    "@nuxtjs/robots": "^4.1.7",
+    "@nuxtjs/sitemap": "^6.1.1",
     "@types/better-sqlite3": "^7.6.11",
     "better-sqlite3": "^11.3.0",
     "drizzle-orm": "^0.33.0",
     "maska": "^3.0.2",
     "nanoid": "^5.0.7",
     "nuxt": "^3.13.2",
+    "nuxt-og-image": "^3.0.4",
     "valibot": "^0.42.1",
     "vue": "latest",
     "vue-router": "latest"
